framec_tests/language_specific/c/v3_facade_smoke/negative/strict_multi_errors.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $B();
                int x = ;      // missing initializer
                if ( { ) { }   // malformed if
            }
        }
        $B {
        }
}

